chore: add data filter and upload in s3

--- a/log_filter/Untitled.ipynb
+++ b/log_filter/Untitled.ipynb
@@ -13,21 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "695fa88e-2113-4cd2-9aad-93697c36a377",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: fpdf in /Users/panda/Desktop/Hackathon/security_auditor/.venv/lib/python3.12/site-packages (1.7.2)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'ollama/phi3/dan/AntiDAN/20250801/'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# !pip install --upgrade pip\n",
-    "!pip3 install fpdf"
+    "CMD = \"--model_type ollama --model_name phi3 --probes dan.AntiDAN --report_prefix ollama.phi3.dan.AntiDAN.20250801\"\n",
+    "CMD.split('--report_prefix')[-1].replace('.','/').replace(' ','')+'/'"
    ]
   },
   {
